--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/plus-jakarta-sans": "^5.0.19",
     "@sendbird/uikit-react": "^3.14.6",
+    "copy-to-clipboard": "^3.3.3",
     "framer-motion": "^11.0.27",
     "million": "3.0.6",
     "react": "^18.2.0",
